<resources>
  <string name="app_name">BF4 Intel</string>
  <string name="action_settings">Settings</string>
  <string name="hello_world">Hello world!</string>
  <string name="label_activity_single_fragment">@string/app_name</string>
  <string name="label_activity_soldier_statistics">STATISTICS</string>
  <string name="label_activity_assignments">ASSIGNMENTS</string>
  <string name="label_activity_awards">AWARDS</string>
  <string name="label_activity_unlocks">UNLOCKS</string>
  <string name="update_status_header">Update your status</string>
  <string name="update_status_hint">Update message here…</string>
  <string name="update_attachment_header">Attach item to post</string>
  <string name="update_attachment_hint">http://</string>
  <string name="create_post_header">Post content</string>
  <string name="create_post_hint">Post message here&#8230;</string>
  <string name="new_thread_header">Thread title</string>
  <string name="new_thread_title_hint">When is BF5 coming out?</string>
  <string name="new_thread_content_header">Content</string>
  <string name="new_thread_content_hint">I think BF5 should come out tomorrow.</string>
  <string name="ab_action_new">New entry</string>
  <string name="ab_action_send">Send</string>
  <string name="msg_empty_feed">The Battle Feed is empty.</string>
  <string name="msg_empty_comments">No comments found.</string>
  <string name="msg_empty_news">No news found.</string>
  <string name="msg_forums_not_found">Forums not found.</string>
  <string name="msg_no_notifications">No notifications found.</string>
  <string name="msg_no_menu_items">No menu items found</string>
  <string name="msg_sending">Sending…</string>
  <string name="msg_enter_comment">Enter a comment!</string>
  <string name="msg_comment_ok">Comment posted!</string>
  <string name="soldier_left_until_rankup">%1$s until rank up</string>
  <string name="activated_new_game">Activated new game/expansion:</string>
  <string name="logged_in_as">Logged in as</string>
  <string name="tracking_user">Tracking user</string>
  <string name="not_logged_in">Not logged in</string>
  <string name="assignment_goals_completed">%1$s/%2$s goals completed</string>
  <string name="generic_x_of_y">%1$s/%2$s</string>
  <string name="weapons">Weapons</string>
  <string name="vehicles">Vehicles</string>
  <string name="reports">Reports</string>
  <string name="details">Details</string>
  <string name="assignments">Assignments</string>
  <string name="awards">Awards</string>
  <string name="battlereports">Battle Reports</string>
  <string name="service_stars">Service Stars</string>
  <string name="kits">Kits</string>
  <string name="comments">Comments</string>
  <string name="soldier_quick_stats">Quick Statistics</string>
  <string name="soldier_detailed_stats">In-depth Statistics</string>
  <string name="soldier_skill">Skill</string>
  <string name="soldier_rating">Rating</string>
  <string name="soldier_completion">Completion level</string>
  <string name="soldier_top_weapons">Top Weapons</string>
  <string name="soldier_top_vehicles">Top Vehicles</string>
  <string name="soldier_num_kills">%1$s kills</string>
  <string name="profile_information_header">Basic Information</string>
  <string name="profile_presentation_header">Presentation</string>
  <string name="progress">Progress</string>
  <string name="navigationdrawer_selected_soldier">Selected soldier</string>
  <string name="navigationdrawer_my_soldier">My soldier</string>
  <string name="navigationdrawer_overview">Overview</string>
  <string name="navigationdrawer_statistics">Statistics</string>
  <string name="navigationdrawer_unlocks">Unlocks</string>
  <string name="navigationdrawer_social">Social</string>
  <string name="navigationdrawer_home">Home</string>
  <string name="navigationdrawer_news">News</string>
  <string name="navigationdrawer_battle_feed">Battle Feed</string>
  <string name="navigationdrawer_notifications">Notifications</string>
  <string name="navigationdrawer_servers">Servers</string>
  <string name="navigationdrawer_forums">Forums</string>
  <string name="navigationdrawer_view_forums">View forums</string>
  <string name="navigationdrawer_saved_threads">Saved threads</string>
  <string name="overview_campaign">Campaign</string>
  <string name="overview_assignments">Assignments</string>
  <string name="overview_medals">Medals</string>
  <string name="overview_ribbons">Ribbons</string>
  <string name="overview_weapons">Weapons</string>
  <string name="overview_vehicles">Vehicle Unlocks</string>
  <string name="overview_kits">Kits</string>
  <string name="overview_dogtags">Dog Tags</string>
  <string name="na">N/A</string>
  <string name="msg_no_stats_details">No Details from Stats found.</string>
  <string name="battlereport_time">Duration:</string>
  <string name="msg_no_battlereports">No Battle Reports found.</string>
  <string name="skills_kd">K/D</string>
  <string name="skills_spm">SPM</string>
  <string name="skills_kpm">KPM</string>
  <string name="skills_kills">Kills</string>
  <string name="skills_score">Score</string>
  <string name="skills_time">Time</string>
  <string name="menu_refresh">Refresh</string>
  <string name="msg_unknown_event">Unknown event: %1$s</string>
  <string name="feed_levelcomplete_heading">Completed a mission:</string>
  <string name="feed_createdforumthread_heading">Created a forum thread:</string>
  <string name="msg_feed_levelcomplete_partner">Partner:</string>
  <string name="msg_feed_levelcomplete_difficulty">Difficulty:</string>
  <string name="feed_category_status">Status</string>
  <string name="feed_category_forumthread">Forum Thread</string>
  <string name="feed_category_wallpost">Wallpost</string>
  <string name="feed_category_forumpost">Forum post</string>
  <string name="feed_category_favoriteserver">Favorite Server</string>
  <string name="feed_category_mission_completed">Mission completed</string>
  <string name="feed_category_new_game">New game</string>
  <string name="feed_category_new_friend">New Friend</string>
  <string name="feed_category_blog_comment">Blog comment</string>
  <string name="feed_category_game_comment">Game Comment</string>
  <string name="feed_category_gamereport">Battle Report</string>
  <string name="feed_category_battlepack">Battle Pack</string>
  <string name="feed_category_unlocks">Unlocks</string>
  <string name="on">on</string>
  <string name="at">\@</string>
  <string name="feed_gamereport_playerresults">Player results</string>
  <string name="gamereport_results">Results</string>
  <string name="skills_ranking">Ranking</string>
  <string name="unknown">Unknown</string>
  <string name="battlefeed_emblem">Emblem</string>
  <string name="battlefeed_appearance">Camo</string>
  <string name="battlefeed_paint">Paint</string>
  <string name="msg_invalid_url">Invalid URL!</string>
  <string name="msg_empty_content">You need to enter some content!</string>
  <string name="string_by">by</string>
  <string name="forum_last_activity">Last activity</string>
  <string name="forum_x_posts_in_y_threads">%1$s posts in %2$s threads</string>
  <string name="forum_created_by">Created by</string>
  <string name="dummy_status">status</string>
  <string name="msg_no_users_found">No users found.</string>
  <string name="x_on_y">%1$s on %2$s</string>
  <string name="feed_category_ranked_up">Ranked up</string>
  <string name="label_search">Search</string>
  <string name="hint_search">Search for users</string>
  <string name="label_unlocks">Unlocks</string>
  <string name="msg_no_unlocks">No unlocks available</string>
  <string name="label_vehicle_unlocks">Vehicle unlocks</string>
  <string name="done">Done</string>
  <string name="empty"/>
  <string name="class_assault">Assault</string>
  <string name="class_engineer">Engineer</string>
  <string name="class_recon">Recon</string>
  <string name="class_support">Support</string>
  <string name="category_lmgs">Light Machine Guns</string>
  <string name="category_pdws">Personal Defence Weapons</string>
  <string name="category_handgrenades">Hand Grenades</string>
  <string name="category_handguns">Hand Guns</string>
  <string name="category_snipers">Sniper Rifles</string>
  <string name="category_dmrs">Designated Marksman Rifles</string>
  <string name="category_carbines">Carbines</string>
  <string name="category_shotguns">Shotguns</string>
  <string name="category_assault_rifles">Assault Rifles</string>
  <string name="category_knives">Knives</string>
  <string name="category_attack_jets">Attack Jets</string>
  <string name="category_aa_vehicles">Anti Air Vehicles</string>
  <string name="category_scout_helicopters">Scout Helicopters</string>
  <string name="category_fast_attack_crafts">Fast Attack Crafts</string>
  <string name="category_stealth_jets">Stealth Jets</string>
  <string name="category_ifvs">Infantry Fighting Vehicles</string>
  <string name="category_battle_tanks">Battle Tanks</string>
  <string name="category_attack_helicopters">Attack Helicopters</string>
  <string name="label_read">Read</string>
  <string name="label_discuss">Discuss</string>
  <string name="label_comment">Comment</string>
  <string name="hint_comment">Your comment here&#8230;</string>
  <string name="forum_latest_activity">Last activity</string>
  <string name="num_hooahs">%1$s hooahs</string>
  <string name="num_comments">%1$s comments</string>
  <string name="msg_error_gate_redirect">Please login to continue.</string>
  <string name="msg_error_not_found">Resource not found.</string>
  <string name="msg_error_already_upvoted">You\'ve already hooah\'d this post!</string>
  <string name="label_share">Share</string>
  <string name="title_report">Report&#8230;</string>
  <string name="title_revoke_hooah">Revoke hooah</string>
  <string name="title_hooah">Hooah</string>
  <string name="title_unhooah">Un-hooah</string>
  <string name="msg_user_said_hooah">You said hooah</string>
  <string name="match_won">Won</string>
  <string name="match_lost">Lost</string>
  <string name="match_draw">Draw</string>
  <string name="header_favorite_battlereport">Favorite Reports</string>
  <string name="header_latest_battlereport">Latest Reports</string>
  <string name="forum_posts_in_threads">%1$s posts in %2$s threads</string>
  <string name="msg_downloading">Downloading information&#8230;</string>
  <string name="feed_gamereport_highlight">Highlight</string>
  <string name="label_name">NAME:</string>
  <string name="label_age">AGE:</string>
  <string name="label_enlisted">ENLISTED:</string>
  <string name="label_country">COUNTRY:</string>
  <string name="cdesc_logo">Logo</string>
  <string name="title_home">Welcome to BF4 Intel!</string>
  <string name="home_main_information_guest">Looks like you haven\'t set the app up yet. Let\'s fix that!</string>
  <string name="home_main_information_tracker">Currently tracking</string>
  <string name="home_select_account">Select account</string>
  <string name="home_select_another_account">Change account</string>
  <string name="title_login">Login</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="prompt_email">Origin™ Email</string>
  <string name="prompt_password">Origin™ Password</string>
  <string name="msg_no_network">This app requires Internet access - are you connected?</string>
  <string name="login_progress_signing_in">Signing in&#8230;</string>
  <string name="label_login">Login</string>
  <string name="menu_about">About</string>
  <string name="menu_reset_password">Reset password&#8230;</string>
  <string name="cdesc_action_item">Action item</string>
  <string name="action_search_short">Search</string>
  <string name="msg_search_error_length">Min length: 3 characters</string>
  <string name="menu_logout">Logout</string>
  <string name="msg_info_join_gplus">Join our community on G+</string>
  <string name="msg_info_join_tweet">Tweet with us</string>
  <string name="msg_info_email">Send us an e-mail</string>
</resources>