<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/ab_action_search"
    android:title="@string/label_search"
    android:icon="@drawable/ic_menu_search"
    android:showAsAction="always"
    android:actionViewClass="android.widget.SearchView"
    />
  <item
    android:id="@+id/ab_action_refresh"
    android:actionLayout="@layout/actionbar_indeterminate_progress"
    android:title="@string/menu_refresh"
    android:icon="@drawable/ic_action_refresh"
    android:showAsAction="never"
    />
  <item
    android:id="@+id/ab_action_about"
    android:title="@string/menu_about"
    android:showAsAction="never"
    />
  <item
    android:id="@+id/ab_action_logout"
    android:title="@string/menu_logout"
    android:showAsAction="never"
    android:visible="false"
    />
</menu>