<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/wrap_form"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/spacing_m">

  <TextView
    style="@style/heading"
    android:id="@+id/update_status_header"
    android:text="@string/update_status_header"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="@dimen/spacing_m"
    android:layout_marginRight="@dimen/spacing_m" />

  <EditText
    android:id="@+id/update_status_input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/update_status_hint"
    android:layout_below="@id/update_status_header"
    android:gravity="top|left"
    android:maxLength="200"
    android:maxLines="8" />

  <TextView
    style="@style/heading"
    android:id="@+id/string_extra"
    android:text="@string/update_attachment_header"
    android:layout_below="@id/update_status_input"
    android:layout_marginLeft="@dimen/spacing_m"
    android:layout_marginRight="@dimen/spacing_m"
    android:layout_marginTop="@dimen/spacing_l" />

  <EditText
    android:id="@+id/input_extra"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/update_attachment_hint"
    android:layout_below="@id/string_extra"
    android:inputType="textUri" />
</RelativeLayout>