<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/login_activity_bg"
  >
  <!-- Login form -->

  <LinearLayout
    android:id="@+id/login_form"
    style="@style/LoginFormContainer"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
      android:id="@+id/logo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_launcher_light"
      android:contentDescription="@string/cdesc_logo"
      android:alpha="0.7"
      android:layout_marginBottom="@dimen/spacing_l"
      />

    <EditText
      android:id="@+id/search_term"
      android:layout_width="@dimen/login_form_element_width"
      android:layout_height="wrap_content"
      android:hint="@string/hint_search"
      android:maxLines="1"
      android:singleLine="true"
      android:imeOptions="actionSearch"
      android:textColor="@color/white"
      android:textColorHint="@color/grey"
      />

    <Button
      style="@style/RedButton"
      android:id="@+id/button_search_account"
      android:layout_width="@dimen/login_form_element_width"
      android:layout_gravity="center_horizontal"
      android:paddingLeft="@dimen/spacing_xl"
      android:paddingRight="@dimen/spacing_xl"
      android:layout_marginTop="@dimen/spacing_l"
      android:text="@string/action_search_short"
      />
  </LinearLayout>

  <!-- Login progress -->

  <LinearLayout
    android:id="@+id/login_status"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/login_progress_margin_top"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone"
    android:background="@color/login_activity_bg"
    >

    <ProgressBar
      style="?android:attr/progressBarStyleLarge"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_m"/>

    <TextView
      android:id="@+id/login_status_message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_l"
      android:fontFamily="sans-serif-light"
      android:text="@string/msg_downloading"
      tools:ignore="UnusedAttribute"/>
  </LinearLayout>

  <include layout="@layout/inlined_error_message" />
</RelativeLayout>