<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/spacing_l"
  android:background="@color/card_activity_bg"
  >
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/card_bg"
    android:padding="@dimen/spacing_l"
    android:layout_gravity="center"
    >

    <TextView
      style="@style/RegularCardTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Need help?"
      />

    <TextView
      style="@style/RegularCardSubtitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="If you ever encounter any issues with BF4 Intel, you can count on us to help. Just tap one of the red buttons below to get started!"
      />


    <Button
      style="@style/BlueButton"
      android:id="@+id/button_email"
      android:layout_width="@dimen/card_big_button_width"
      android:layout_gravity="center_horizontal"
      android:text="@string/msg_info_email"
      android:layout_marginTop="@dimen/spacing_l"
      />
    <Button
      style="@style/BlueButton"
      android:id="@+id/button_gplus"
      android:layout_width="@dimen/card_big_button_width"
      android:layout_gravity="center_horizontal"
      android:text="@string/msg_info_join_gplus"
      android:layout_marginTop="@dimen/spacing_m"
      />
    <Button
      style="@style/BlueButton"
      android:id="@+id/button_tweet"
      android:layout_width="@dimen/card_big_button_width"
      android:layout_gravity="center_horizontal"
      android:text="@string/msg_info_join_tweet"
      android:layout_marginTop="@dimen/spacing_m"
      />
  </LinearLayout>
</ScrollView>
