<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  >

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_single"
    android:background="@color/lightgrey">

    <RelativeLayout
      style="@style/SoldierInfoBox"
      android:id="@+id/wrap_soldier_general"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TextView
        style="@style/heading"
        android:id="@+id/heading_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigationdrawer_overview"/>

      <TextView
        android:id="@+id/soldier_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:textColor="@color/blue"
        android:text="xBOSS_der_BOSSEx"
        android:layout_below="@id/heading_progress"/>

      <ImageView
        android:id="@+id/image_rank"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/test_rank31"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/cdesc_rank_image"/>


      <TextView
        android:id="@+id/current_rank_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MASTER GUNNERY SERGEANT 2 STAR"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:layout_below="@id/image_rank"
        android:textAllCaps="true"/>

      <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/progress_rank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_rank_title"
        android:indeterminate="false"/>

      <TextView
        style="@style/heading"
        android:id="@+id/value_rank_progress"
        android:text="29,613/50,000"
        android:layout_below="@id/progress_rank"
        android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <LinearLayout
      style="@style/SoldierInfoBox"
      android:id="@+id/wrap_soldier_service_stars"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        style="@style/heading"
        android:id="@+id/heading_service_stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_stars"/>

      <include
        layout="@layout/list_item_soldier_service_stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

      <include
        layout="@layout/list_item_soldier_service_stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

      <include
        layout="@layout/list_item_soldier_service_stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

      <include
        layout="@layout/list_item_soldier_service_stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

      <include
        layout="@layout/list_item_soldier_service_stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>

    <LinearLayout
      style="@style/SoldierInfoBox"
      android:id="@+id/wrap_soldier_skills"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        style="@style/heading"
        android:id="@+id/heading_average_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soldier_skill"/>

      <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="Rating"
        android:textColor="@color/darkgrey"
        android:gravity="center_horizontal"
        android:textAllCaps="true"
        />

      <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="164"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_xxl"
        />

      <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="3"
          >

          <include
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            layout="@layout/list_item_soldier_skills"/>

          <include
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            layout="@layout/list_item_soldier_skills"/>

          <include
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            layout="@layout/list_item_soldier_skills"/>
        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="3"
          >

          <include
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            layout="@layout/list_item_soldier_skills"/>

          <include
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            layout="@layout/list_item_soldier_skills"/>

          <include
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            layout="@layout/list_item_soldier_skills"/>
        </LinearLayout>
      </TableLayout>
    </LinearLayout>

    <LinearLayout
      style="@style/SoldierInfoBox"
      android:id="@+id/wrap_soldier_completions"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="0dp"
      android:orientation="vertical">

      <TextView
        style="@style/heading"
        android:id="@+id/heading_detailed_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soldier_completion"/>

      <include layout="@layout/list_item_soldier_completion"/>

      <include layout="@layout/list_item_soldier_completion"/>

      <include layout="@layout/list_item_soldier_completion"/>

      <include layout="@layout/list_item_soldier_completion"/>

      <include layout="@layout/list_item_soldier_completion"/>

      <include layout="@layout/list_item_soldier_completion"/>

      <include layout="@layout/list_item_soldier_completion"/>

      <include layout="@layout/list_item_soldier_completion"/>
    </LinearLayout>
  </LinearLayout>
</ScrollView>